# 911-transcript-triage

./: .env.example  .gitignore  Dockerfile  Makefile  PRINCIPLES.md  README.md  STUDY_PLAN.md  docker-compose.yml  index.html  open-tracker.bat  pyproject.toml  requirements.txt
.claude/: launch.json
.github/workflows/: ci.yml
data/: README.md
infra/terraform/: main.tf
src/triage_stream.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/triage_stream/api/: main.py
src/triage_stream/asr/: transcriber.py
src/triage_stream/classifier/: predict.py  train.py
src/triage_stream/common/: config.py  logging.py  schemas.py
src/triage_stream/ingest/: stream_simulator.py
src/triage_stream/monitoring/: drift.py
src/triage_stream/router/: router.py
src/triage_stream/utils/: convert_wav_to_16k.py
tests/e2e/: test_pipeline.py
tests/integration/: test_api.py
tests/unit/: test_schemas.py
