[project]
name = "triage-stream"
version = "0.1.0"
description = "Real-time 911-transcript urgency triage: streaming ASR + ML classification + routing."
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
markers = ["e2e: end-to-end tests (slow)"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
